
add_library(alien_engine_gpu_kernels_lib
    Array.cuh
    AttackerProcessor.cuh
    Base.cuh
    Cell.cuh
    CellComputationProcessor.cuh
    CellConnectionProcessor.cuh
    CellFunctionProcessor.cuh
    CellProcessor.cuh
    ClusterProcessor.cuh
    ConstantMemory.cu
    ConstantMemory.cuh
    ConstructorProcessor.cuh
    CudaMemoryManager.cuh
    CudaNumberGenerator.cuh
    CudaSimulationFacade.cu
    CudaSimulationFacade.cuh
    DataAccessKernels.cu
    DataAccessKernels.cuh
    DataAccessKernelsLauncher.cu
    DataAccessKernelsLauncher.cuh
    DebugKernels.cu
    DebugKernels.cuh
    Definitions.cuh
    Definitions.h
    DensityMap.cuh
    EditKernels.cu
    EditKernels.cuh
    EditKernelsLauncher.cu
    EditKernelsLauncher.cuh
    FlowFieldKernels.cu
    FlowFieldKernels.cuh
    GarbageCollectorKernels.cu
    GarbageCollectorKernels.cuh
    GarbageCollectorKernelsLauncher.cu
    GarbageCollectorKernelsLauncher.cuh
    GenomeDecoder.cuh
    HashMap.cuh
    HashSet.cuh
    InjectorProcessor.cuh
    List.cuh
    Macros.cuh
    Map.cuh
    MapSectionCollector.cuh
    Math.cuh
    MuscleProcessor.cuh
    MutationProcessor.cuh
    NerveProcessor.cuh
    NeuronProcessor.cuh
    Objects.cu
    Objects.cuh
    ObjectFactory.cuh
    Operations.cuh
    Particle.cuh
    ParticleProcessor.cuh
    Physics.cuh
    ProprocessedCellFunctionData.cuh
    QuantityConverter.cuh
    RenderingData.cu
    RenderingData.cuh
    RenderingKernels.cu
    RenderingKernels.cuh
    RenderingKernelsLauncher.cu
    RenderingKernelsLauncher.cuh
    SelectionResult.cuh
    SensorProcessor.cuh
    ShapeGenerator.cuh
    SimulationData.cu
    SimulationData.cuh
    SimulationKernels.cu
    SimulationKernels.cuh
    SimulationKernelsLauncher.cu
    SimulationKernelsLauncher.cuh
    SimulationStatistics.cuh
    SpotCalculator.cuh
    StatisticsKernelsLauncher.cu
    StatisticsKernelsLauncher.cuh
    StatisticsKernels.cu
    StatisticsKernels.cuh
    Swap.cuh
    TestKernels.cu
    TestKernels.cuh
    TestKernelsLauncher.cu
    TestKernelsLauncher.cuh
    TransmitterProcessor.cuh
    TOs.cuh)

target_link_libraries(alien_engine_gpu_kernels_lib alien_base_lib)

# See https://gitlab.kitware.com/cmake/cmake/-/issues/17520
set_property(TARGET alien_engine_gpu_kernels_lib PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS ON)