
add_library(EngineGpuKernels
    ActiveRadiationSources.cuh
    Array.cuh
    AttackerProcessor.cuh
    Base.cuh
    CellComputationProcessor.cuh
    CellConnectionProcessor.cuh
    CellProcessor.cuh
    ClusterProcessor.cuh
    ConstantMemory.cu
    ConstantMemory.cuh
    ConstructorProcessor.cuh
    CudaMemoryManager.cuh
    CudaNumberGenerator.cuh
    CudaShapeGenerator.cuh
    DataAccessKernels.cu
    DataAccessKernels.cuh
    DataAccessKernelsLauncher.cu
    DataAccessKernelsLauncher.cuh
    DebugKernels.cu
    DebugKernels.cuh
    Definitions.cuh
    Definitions.h
    DensityMap.cuh
    DetonatorProcessor.cuh
    EditKernels.cu
    EditKernels.cuh
    EditKernelsLauncher.cu
    EditKernelsLauncher.cuh
    ForceFieldKernels.cu
    ForceFieldKernels.cuh
    GarbageCollectorKernels.cu
    GarbageCollectorKernels.cuh
    GarbageCollectorKernelsLauncher.cu
    GarbageCollectorKernelsLauncher.cuh
    Genome.cuh
    GenomeDecoder.cuh
    GenomeTO.cuh
    HashMap.cuh
    HashSet.cuh
    InjectorProcessor.cuh
    List.cuh
    Macros.cuh
    Map.cuh
    MapSectionCollector.cuh
    Math.cuh
    MaxAgeBalancer.cu
    MaxAgeBalancer.cuh
    MuscleProcessor.cuh
    MutationProcessor.cuh
    OscillatorProcessor.cuh
    NeuronProcessor.cuh
    Object.cuh
    Objects.cu
    Objects.cuh
    ObjectTO.cuh
    ObjectFactory.cuh
    Operations.cuh
    ParameterCalculator.cuh
    Physics.cuh
    PreprocessedSimulationData.cuh
    RadiationProcessor.cuh
    ReconnectorProcessor.cuh
    RenderingData.cu
    RenderingData.cuh
    RenderingKernels.cu
    RenderingKernels.cuh
    RenderingKernelsLauncher.cu
    RenderingKernelsLauncher.cuh
    SelectionResult.cuh
    SensorProcessor.cuh
    SignalProcessor.cuh
    SimulationCudaFacade.cu
    SimulationCudaFacade.cuh
    SimulationData.cu
    SimulationData.cuh
    SimulationKernels.cu
    SimulationKernels.cuh
    SimulationKernelsLauncher.cu
    SimulationKernelsLauncher.cuh
    SimulationParametersUpdateService.cu
    SimulationParametersUpdateService.cuh
    SimulationStatistics.cuh
    StatisticsService.cu
    StatisticsService.cuh
    StatisticsKernelsLauncher.cu
    StatisticsKernelsLauncher.cuh
    StatisticsKernels.cu
    StatisticsKernels.cuh
    TestKernels.cu
    TestKernels.cuh
    TestKernelsLauncher.cu
    TestKernelsLauncher.cuh
    TransmitterProcessor.cuh
    Util.cuh
    )

target_link_libraries(EngineGpuKernels Base)
target_link_libraries(EngineGpuKernels EngineInterface)

# See https://gitlab.kitware.com/cmake/cmake/-/issues/17520
set_property(TARGET EngineGpuKernels PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS ON)